# ecco-the-flipper

./: README.md
esp32/: Cargo.toml  sdkconfig.defaults
esp32/src/: main.rs  webapp.rs
flipper/: application.fam  ecco.c  ecco.h  protocol.c  protocol.h  tools.c  tools.h
protocol/: schema.md
test/: README.md  integration.test.js  mock-flipper.js  package-lock.json  package.json  protocol.js  protocol.test.js
webapp/: app.js  index.html  style.css
